testsuite/gnatprove/tests/O429-045__tasking_restrictions/test.out
analysis of good.gpr
--------------------------
Phase 1 of 3: generation of data representation information ...
Phase 2 of 3: generation of Global contracts ...
Phase 3 of 3: fast partial checking of SPARK legality rules ...

analysis of bad_profile.gpr
--------------------------
Phase 1 of 3: generation of data representation information ...
Phase 2 of 3: generation of Global contracts ...
Phase 3 of 3: fast partial checking of SPARK legality rules ...
 error: tasking in SPARK requires Ravenscar profile (SPARK RM 9(2))
--> p.ads:3:09
    3 |       task T;
      |            ^
      + violation of pragma SPARK_Mode at bad_profile.adc:1
      --> bad_profile.adc:1:01
    1 |    pragma SPARK_Mode (On);
      |    ^
gnatprove: error during fast partial checking of SPARK legality rules

analysis of bad_pep.gpr
--------------------------
Phase 1 of 3: generation of data representation information ...
Phase 2 of 3: generation of Global contracts ...
Phase 3 of 3: fast partial checking of SPARK legality rules ...
 error: tasking in SPARK requires sequential elaboration (SPARK RM 9(2))
--> p.ads:3:09
    3 |       task T;
      |            ^
      + violation of pragma SPARK_Mode at bad_pep.adc:1
      --> bad_pep.adc:1:01
    1 |    pragma SPARK_Mode (On);
      |    ^
gnatprove: error during fast partial checking of SPARK legality rules
